--- a/Emergency-App/package.json
+++ b/Emergency-App/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "server": "node src/backend/server.js",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run build && cd ../ && cd backend && node ./server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
